# React-CRUD

./: README.md
Nova pasta/backendflask/: Dockerfile  pyproject.toml
app/: README.md
app-teste-01/: package.json
app-teste-01/Backend/: .env  textos.txt
app-teste-01/Backend/tests/: test_backendflask.py
app-teste-01/public/: index.html
app-teste-01/src/: App.js
app-teste-01/src/Components/Header/: index.js
app-teste-02/: package.json
app-teste-02/src/: App.js
app-teste-02/src/components/header/: header.js
app/Backend/: README.md
app/Backend/src/: app.py
app/src/: index.js
app/src/Components/Product/: index.js
backend/: .env  index.js  package.json
backend/src/: app.js
backend/src/api/routes/: places.js
backendFlask/: Dockerfile  docker-compose.yml  requirements.txt
backendFlask/src/: app.py
backendflask/: README.md  pyproject.toml
backendflask/src/: app.py
teste-api-express/backend/: .env  Dockerfile  docker-compose.yml  index.js  package.json
teste-api-express/backend/src/: app.js
teste-api-express/backend/src/api/models/: places.js
teste-api-express/backend/src/api/routes/: places.js
